--- a/app/styles/ember-appuniversum/_c-dropdown.scss
+++ b/app/styles/ember-appuniversum/_c-dropdown.scss
@@ -194,19 +194,14 @@ $au-dropdown-caret-size        : .4rem !default;
   display: inline-flex;
   align-items: center;
   white-space: nowrap;
-  text-underline-offset: .3ex;
-  text-decoration: underline;
-  text-decoration-color: $au-gray-300;
-  color: $au-gray-800;
+  color: $au-blue-700;
   background-color: transparent;
   transition: color $au-transition;
   cursor: pointer;
 
   &:hover {
-    color: $au-dropdown-hover-color;
+    color: $au-blue-600;
     background-color: transparent;
-    text-decoration: underline;
-    text-decoration-color: $au-dropdown-underline-hover;
   }
 
   &:focus {
